# Larch

./: .gitignore  AGENTS.md  GEMENI.md  Justfile  README.md  fix_sets.py  index.html  package-lock.json  package.json  patch_addfilterdropdown.py  patch_filterbar.py  patch_table.py  patch_table_2.py  patch_table_3.py  pnpm-lock.yaml  pnpm-workspace.yaml  verify_frontend.py
.agent/rules/: instructions.md  instrunctions.md
.github/workflows/: release.yml
.jules/: palette.md  sentinel.md
.sisyphus/: boulder.json
.sisyphus/notepads/dashboard-filters-columns/: decisions.md  (+2 more)
.sisyphus/plans/: bug-fixes-version-increment.md  dashboard-filters-columns.md  saved-views-v2.1.md  unread-issue-indicator.md  v2.0.0-beta0-improvements.md
crates/taiga-client/: Cargo.toml
crates/taiga-client/src/: errors.rs  lib.rs  models.rs  prelude.rs  tests.rs
docs/: ai-architect.md  architecture.md  doc-design.md  doc-desing.md
docs/ADR/: 0001-workspace-and-api-client-crate.md  0002-dynamic-client-instantiation.md  0003-orm-choice.md  0004-issue-detail-sidebar-redesign.md
larch-app/: Cargo.toml  package.json
larch-app/crates/taiga-client/: Cargo.toml
larch-app/crates/taiga-client/src/: errors.rs  lib.rs  models.rs
larch-app/src-tauri/: Cargo.toml  tauri.conf.json
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: app_commands.rs  auth_commands.rs  draft_commands.rs  issue_commands.rs  mod.rs  project_commands.rs  view_commands.rs
src-tauri/src/domain/: issue.rs  issue_detail.rs  mod.rs  project.rs  user.rs
src-tauri/src/entities/: config.rs  drafts.rs  mod.rs  saved_views.rs
src-tauri/src/repositories/: mod.rs  tests.rs
src-tauri/src/services/: credentials.rs  db.rs  mod.rs  token_refresh.rs  view_sanitizer.rs
src/lib/: commands.svelte.ts  i18n.ts  sanitize.ts  security.ts  types.ts
static/locales/: en.json
(+65 files in other folders)
