[package]
name = "larch-app"
version = "2.0.0-0"
description = "A Tauri App"
authors = ["Oscar Garcia de Lara Parreño"]
license = "MIT"
repository = "Yyandrakk/Larch"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "larch_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
thiserror = "2.0.12"
keyring = "2"
anyhow = "1"
secrecy = { version = "0.8", features = ["serde"] }
taiga-client = { path = "../crates/taiga-client" }
url = "2"
sea-orm = { version = "1.0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
async-trait = "0.1"
tauri-plugin-mcp-bridge = "0.4.0"
chrono = "0.4"


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
