[package]
name = "taiga-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
url = "2.5"
secrecy = { version = "0.8", features = ["serde"] }
log = "0.4"
thiserror = "1.0"
[dev-dependencies]
wiremock = "0.6"
