[package]
name = "taiga-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
url = "2"
secrecy = { version = "0.8", features = ["serde"] }

[dev-dependencies]
wiremock = "0.6"
